# ghostty.styles.tui

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.claude/: logbook.local.md
.claude/system/: features.json  history.txt  rules.txt
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-25-light-dark-mode-design.md  2026-02-25-light-dark-mode-plan.md  2026-02-25-tests-ci-design.md  2026-02-25-tests-ci-plan.md  2026-02-25-theme-creation-design.md  2026-02-25-theme-creation-plan.md  2026-02-25-theme-cycling-design.md  2026-02-25-theme-cycling-plan.md
src/: api.rs  app.rs  cli.rs  collection.rs  config.rs  creator.rs  cycling.rs  daemon.rs  darkmode.rs  export.rs  ghostty.rs  main.rs  preview.rs  shell_hook.rs  theme.rs
src/ui/: browser.rs  collections.rs  create_meta.rs  creator.rs  details.rs  help.rs  mod.rs  preview.rs
