[package]
name = "ghostty-styles"
version = "1.1.0"
edition = "2021"
description = "A TUI for browsing and previewing Ghostty terminal themes"
license = "MIT"
authors = ["mcfearsome <jesse@mcfearsome.dev>"]
repository = "https://github.com/mcfearsome/ghostty.styles.tui"
readme = "README.md"
keywords = ["ghostty", "terminal", "themes", "tui", "ratatui"]
categories = ["command-line-utilities"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ghostty-styles", dest = "/usr/bin/ghostty-styles", mode = "0755" },
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
unicode-width = "0.2"

[package.metadata.deb]
maintainer = "mcfearsome"
section = "utils"
depends = "libc6, libssl3"
extended-description = """\
A TUI application for browsing and previewing Ghostty terminal themes. \
Fetches themes from the ghostty-style.vercel.app API and lets users \
search, filter, preview (via OSC escape sequences), and apply themes \
directly to their Ghostty config file."""
assets = [
    ["target/release/ghostty-styles", "usr/bin/", "755"],
]
